# DiscOTP

./: Dockerfile  README.md  bot.py  data.py  data.sqlite  main.py  pyproject.toml
old/: bot.py
